ks - fixed map was resetting to group default location after searching for an address.  added CSS to align text in bubbles for IE6

--- a/web/src/main/webapp/css/main.css
+++ b/web/src/main/webapp/css/main.css
@@ -2868,6 +2868,7 @@ ul.htabs li.seatbelt_on {
 
 .google_popups_rows {
 	vertical-align: top;
+	text-align: left;
 	}
 	
 .google_popups_rows a:link, a:visited, a:active, a:hover {
